# -forLab1

./: README.md
newres1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example.sln
res1/: CMakeLists.txt  lab1.cpp
